libva-driver-intel NEWS -- summary of changes.  2012-03-DD
Copyright (C) 2009-2011 Intel Corporation

Version 1.0.17 - DD.Mar.2012
* Fix weighted prediction indicator for Sandy Bridge
* Fix and simplify first macroblock bit offset calculation (ILK, SNB, IVB)

Version 1.0.16 - 14.Feb.2012
* Fix VC-1 bitplane buffer size (SNB, IVB)
* Fix VC-1 motion vector modes for Ivy Bridge
* Fix MFX_QM_STATE for H.264 flat scaling lists (IVB)
* Fix and simplify AVC_REF_IDX_STATE setup (ILK, SNB, IVB)
* Fix memory leak of encoder buffers
* Fix check for internal VA surface format prior to rendering
* Add support for B43 chipset (Alexander Inyukhin)

Version 1.0.15 - 28.Oct.2011
* Add auto-generated Debian packaging
* Fix VC-1 decoding (TTFRM packing)
* Fix MPEG-2 decoding on Ivy Bridge
* Fix MPEG-2 decoding with sparse QM matrices updates
* Fix slice-param & slice-data buffer memory leaks

Version 1.0.14 - 28.Jul.2011
* Add H.264 encoding support to Ivy Bridge
* Add support for VA_SUBPICTURE_DESTINATION_IS_SCREEN_COORD
* Fix next slice vertical position for MPEG-2 (#38628)
* Fix subpicture scale factor for Y axis
* Fix GPU hang when decoding field coded MPEG-2 picture
* Fix memory leaks (Edgar Hucek)

Version 1.0.13 - 25.May.2011
* Add H.264 encoding support to Sandy Bridge
* Add MPEG-2, VC-1 and H.264 decoding support to Ivy Bridge
* Fix thread safety issues

Version 1.0.11 - 14.Mar.2011
* Add deinterlacing & scaling support to Sandy Bridge
* Add vaDeriveImage() implementation
* Fix VC-1 decoding for Main/Simple profiles

Version 1.0.9 - 27.Jan.2011
* Add VC-1 decoding support to Sandy Bridge

Version 1.0.8 - 21.Jan.2011
* Add support for IA44/AI44 subpicture formats (#32868)

Version 1.0.7 - 17.Dec.2011
* Add MPEG-2 and H.264 decoding support to Sandy Bridge

Version 1.0.5 - 02.Sep.2010
* Add deinterlacing & scaling support to Ironlake

Version 1.0.4 - 13.Jul.2010
* Add vaGetImage() implementation
* Add support for RGBA subpictures
* Fix H.264 decoding on Ironlake
